force-app/main/default/objects/List_Add_On__c/List_Add_On__c.object-meta.xml
<CustomObject>
    <label>List Add On</label>
    <nameField>
        <label>List Add On Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List Add On</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>