force-app/main/default/objects/List_Add_On__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>List Add On</relationshipLabel>
    <relationshipName>List_Add_On</relationshipName>
    <type>Lookup</type>
</CustomField>