force-app/main/default/objects/List_Add_On__c/fields/Contract_Addition__c.field-meta.xml
<CustomField>
    <fullName>Contract_Addition__c</fullName>
    <label>Contract Addition</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>