force-app/main/default/objects/List_Add_On__c/fields/Id_Country__c.field-meta.xml
<CustomField>
    <fullName>Id_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>List Add On</relationshipLabel>
    <relationshipName>List_Add_On</relationshipName>
    <type>Lookup</type>
</CustomField>