force-app/main/default/objects/List_Add_On__c/fields/Requires_Esignature__c.field-meta.xml
<CustomField>
    <fullName>Requires_Esignature__c</fullName>
    <description>SSC-2501</description>
    <label>Requires Esignature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mandatory</fullName>
            </value>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>