force-app/main/default/objects/List_Add_On__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclusivity</fullName>
            </value>
            <value>
                <fullName>Deal / Promotion</fullName>
            </value>
            <value>
                <fullName>Extra Terms and Conditions</fullName>
            </value>
            <value>
                <fullName>Deals</fullName>
                <isActive>false</isActive>
                <label>Deals</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>