force-app/main/default/objects/List_Add_On__c/recordTypes/AT_List_Add_On.recordType-meta.xml
<RecordType>
    <fullName>AT_List_Add_On</fullName>
    <active>true</active>
    <label>AT List Add On</label>
</RecordType>