force-app/main/default/objects/List_Add_On__c/recordTypes/CD_List_Add_On.recordType-meta.xml
<RecordType>
    <fullName>CD_List_Add_On</fullName>
    <active>true</active>
    <label>CD List Add On</label>
</RecordType>