force-app/main/default/objects/List_Add_On__c/recordTypes/CZ_List_Add_On.recordType-meta.xml
<RecordType>
    <fullName>CZ_List_Add_On</fullName>
    <active>true</active>
    <description>Czech Republic Add On</description>
    <label>CZ List Add On</label>
</RecordType>