force-app/main/default/objects/List_Add_On__c/recordTypes/DE_List_Add_On.recordType-meta.xml
<RecordType>
    <fullName>DE_List_Add_On</fullName>
    <active>true</active>
    <label>DE List Add On</label>
</RecordType>