force-app/main/default/objects/List_Add_On__c/recordTypes/DH_AU_List_Add_On.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_List_Add_On</fullName>
    <active>true</active>
    <label>DH AU List Add On</label>
</RecordType>