force-app/main/default/objects/List_Add_On__c/recordTypes/FI_List_Add_On.recordType-meta.xml
<RecordType>
    <fullName>FI_List_Add_On</fullName>
    <active>true</active>
    <label>FI List Add On</label>
</RecordType>