force-app/main/default/objects/List_Add_On__c/recordTypes/FP_List_Add_On.recordType-meta.xml
<RecordType>
    <fullName>FP_List_Add_On</fullName>
    <active>true</active>
    <label>FP List Add On</label>
</RecordType>