force-app/main/default/objects/List_Add_On__c/recordTypes/HU_List_Add_On.recordType-meta.xml
<RecordType>
    <fullName>HU_List_Add_On</fullName>
    <active>true</active>
    <description>Hungary Add On</description>
    <label>HU List Add On</label>
</RecordType>