force-app/main/default/objects/List_Add_On__c/recordTypes/PY_List_Add_On.recordType-meta.xml
<RecordType>
    <fullName>PY_List_Add_On</fullName>
    <active>true</active>
    <description>Record type for Pedidos Ya and in future to be global for all countries</description>
    <label>PY List Add On</label>
</RecordType>