force-app/main/default/objects/List_Add_On__c/recordTypes/SE_List_Add_On.recordType-meta.xml
<RecordType>
    <fullName>SE_List_Add_On</fullName>
    <active>true</active>
    <label>SE List Add On</label>
</RecordType>