force-app/main/default/objects/List_Add_On__c/recordTypes/Talabat_List_Add_On.recordType-meta.xml
<RecordType>
    <fullName>Talabat_List_Add_On</fullName>
    <active>true</active>
    <label>Talabat List Add On</label>
</RecordType>