force-app/main/default/objects/List_Add_On__c/recordTypes/UK_List_Add_On.recordType-meta.xml
<RecordType>
    <fullName>UK_List_Add_On</fullName>
    <active>true</active>
    <label>UK List Add On</label>
</RecordType>