force-app/main/default/objects/List_Add_On__c/recordTypes/Yogiyo_List_Add_On.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_List_Add_On</fullName>
    <active>true</active>
    <label>Yogiyo List Add On</label>
</RecordType>